--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             Hi,my name is <span class="red">Fazal Ahmed</span> I'm a <span id="element"></span>
 
             <div class="btn">
-                <button class="bt"><a href="Hireme\hireme.html">HIRE ME</a></button>
+                <button class="bt"><a href="hireme.html">HIRE ME</a></button>
                 <button class="bt2"><a href='resume.pdf' download="resume.pdf">DOWNLOAD RESUME</a></button>
             </div>
         </div>
